introspection: Add missing annotation

https://bugzilla.gnome.org/show_bug.cgi?id=661716